--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "antd": "^4.15.2",
     "axios": "^0.21.1",
     "leaflet": "^1.7.1",
+    "moment-range": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
     "react-leaflet": "^3.1.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
